--- a/style.css
+++ b/style.css
@@ -1,61 +1,52 @@
 body{
-    background-color: rgb(240, 248, 255);
+    background-color: rgb(255, 255, 255);
     font-family: 'Lora', serif;
     margin: 0px;
 }
-
-header{
+.navbar{
     background-color: black;
-    display: grid;
-    border: 15px;
-    height: 160px;
-    width: auto;
-    box-shadow: 50px 15px 5px;
+    padding: 5px;
 }
-
-header{
-    font-family: 'Lora', serif;
-    color: aliceblue;
-
+.container{
+    display: flex;
+    padding: 1.5em;
+    align-items: center;
+    justify-content:center;
+    margin-right: 10%;
 }
-
-#logo{
-    float: left;
-    padding: 15px;
-    margin: 10px;
-}
-
-a{
-    text-decoration: none;
-    outline: none;
-    color: inherit;
-}
-
 a:visited{
     color: inherit;
 }
-
-.headelements{
-    list-style-type: none;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    border: 15px;
-    margin: 32px;
-    padding: 32px;
+.navbar .logo{
+    display: flex;
+    position: static;
 }
-.headelements{
-    font-family: 'Lora', serif;
+.navbar .logo a:hover{
+    background-color: inherit;
+    font-size: inherit;
+}
+.navbar ul{
+    list-style: none;
+    margin: 0%;
+    overflow: hidden;
+}
+.navbar ul a{
+    color: white;
+    text-decoration: none;
+    padding: 15px;
+    display: block;
     text-align: center;
-    color: aliceblue;
-    font-size: 25px;
 }
-
+.navbar a:hover{
+    color: rgb(228, 228, 131);
+}
+.navbar li{
+    float: left;
+}
 main{
-    margin: 15px;
+    margin: 20px;
     padding: 15px;
 }
-
-
 footer{
     margin: auto;
     border: 2px;
@@ -63,4 +54,12 @@ footer{
     background-color: black;
     font-size: 15px;
     color: aliceblue;
+}
+footer a{
+    color: white;
+    text-decoration: none;
+}
+footer a:hover{
+    color: rgb(228, 228, 131);
+    font-size: 1.1em;
 }
